--- a/internal/gen/_template/client.tmpl
+++ b/internal/gen/_template/client.tmpl
@@ -12,6 +12,12 @@ type Client struct {
   rpc Invoker
 }
 
+// Invoker returns Invoker used by this client.
+func (c *Client) Invoker() Invoker {
+    return c.rpc
+}
+
+// NewClient creates new Client.
 func NewClient(invoker Invoker) *Client {
   return &Client{
     rpc: invoker,
