fix(gen): do not generate methods, if generateClient not set

--- a/internal/gen/_template/main.tmpl
+++ b/internal/gen/_template/main.tmpl
@@ -336,7 +336,7 @@ _ {{ $s.Interface }} = &{{ $s.Name }}{}
 {{ end }}
 )
 
-{{- if $s.Method }}
+{{- if and $.GenerateClient $s.Method }}
 // {{ $s.Method }} invokes method {{ $s.RawType }} returning error if any.
 {{- if $s.Docs }}
 {{- range $d := $s.Docs }}
