--- a/telegram/query/internal/itergen/_template/gen.tmpl
+++ b/telegram/query/internal/itergen/_template/gen.tmpl
@@ -6,7 +6,7 @@ package {{ $.Package }}
 import (
     "context"
 
-    "golang.org/x/xerrors"
+    "github.com/ogen-go/errors"
 
     "github.com/gotd/td/tg"
 )
@@ -160,7 +160,7 @@ func (b *{{ $.Name }}QueryBuilder) Count(ctx context.Context) (int, error) {
     iter := b.Iter()
     c, err := iter.Total(ctx)
     if err != nil {
-        return 0, xerrors.Errorf("get total: %w", err)
+        return 0, errors.Wrap(err, "get total")
     }
     return c, nil
 }
@@ -170,7 +170,7 @@ func (b *{{ $.Name }}QueryBuilder) Collect(ctx context.Context) ([]{{ $.ElemName
     iter := b.Iter()
     c, err := iter.Total(ctx)
     if err != nil {
-        return nil, xerrors.Errorf("get total: %w", err)
+        return nil, errors.Wrap(err, "get total")
     }
 
     r := make([]{{ $.ElemName }}, 0, c)
