feat(gen): generate TDLib JSON encoder

--- a/internal/gen/_template/interface.tmpl
+++ b/internal/gen/_template/interface.tmpl
@@ -19,6 +19,9 @@
 //  }
 type {{ $f.Name }} interface {
 {{ template "class_interface_header" $f }}
+    {{- if $.Config.Flags.TDLibJSON }}
+    EncodeTDLibJSON(b *jsontd.Encoder) error
+    {{- end }}
 
 {{ range $field := $f.SharedFields.Common -}}
     {{- template "print_comment" $field.Comment }}
