--- a/internal/gen/_template/header.tmpl
+++ b/internal/gen/_template/header.tmpl
@@ -13,6 +13,7 @@ import (
 "go.uber.org/multierr"
 
 "github.com/gotd/td/bin"
+"github.com/gotd/td/jsontd"
 "github.com/gotd/td/tdp"
 "github.com/gotd/td/tgerr"
 )
@@ -28,6 +29,7 @@ var (
   _ = sort.Ints
   _ = tdp.Format
   _ = tgerr.Error{}
+  _ = jsontd.Encoder{}
 )
 
 {{ end }}
