--- a/internal/gen/_template/main.tmpl
+++ b/internal/gen/_template/main.tmpl
@@ -12,6 +12,7 @@
 {{ template "type_info" $s }}
 {{ template "encode" $s }}
 {{ template "decode" $s }}
+{{ if $.Flags.TDLibJSON }}{{ template "encode_tdlib_json" $s }}{{ end }}
 {{ if $.Flags.GetSet }}{{ template "getset" $s }}{{ end }}
 {{ if $.Flags.Mapping }}{{ template "field_mapping" newStructConfig ($s) ($) }}{{ end }}
 {{ if $.Flags.Client }}{{ template "method" $s }}{{ end }}
