--- a/internal/gen/_template/interface.tmpl
+++ b/internal/gen/_template/interface.tmpl
@@ -21,8 +21,8 @@ type {{ $f.Name }} interface {
 {{ template "class_interface_header" $f }}
 
     {{ if $.Config.Flags.TDLibJSON }}
-    EncodeTDLibJSON(b jsontd.Encoder) error
-    DecodeTDLibJSON(b jsontd.Decoder) error
+    EncodeTDLibJSON(b tdjson.Encoder) error
+    DecodeTDLibJSON(b tdjson.Decoder) error
     {{- end }}
 
 {{ range $field := $f.SharedFields.Common -}}
