--- a/internal/gen/_template/encode_tdlib.tmpl
+++ b/internal/gen/_template/encode_tdlib.tmpl
@@ -1,7 +1,7 @@
 {{- /*gotype: github.com/gotd/td/internal/gen.structDef*/ -}}
 {{ define "encode_tdlib_json" }}{{ $s := . }}
-// EncodeTDLibJSON implements jsontd.TDLibEncoder.
-func ({{ $s.Receiver }} *{{ $s.Name }}) EncodeTDLibJSON({{ $s.BufArg }} jsontd.Encoder) error {
+// EncodeTDLibJSON implements tdjson.TDLibEncoder.
+func ({{ $s.Receiver }} *{{ $s.Name }}) EncodeTDLibJSON({{ $s.BufArg }} tdjson.Encoder) error {
     if {{ $s.Receiver }} == nil {
         return fmt.Errorf("can't encode {{ $s.RawType }} as nil")
     }
