--- a/internal/gen/_template/encode_tdlib.tmpl
+++ b/internal/gen/_template/encode_tdlib.tmpl
@@ -7,12 +7,8 @@ func ({{ $s.Receiver }} *{{ $s.Name }}) EncodeTDLibJSON({{ $s.BufArg }} tdjson.E
     }
     {{ $s.BufArg }}.ObjStart()
     {{ $s.BufArg }}.PutID("{{ $s.RawName }}")
-{{- range $f := $s.Fields }}
-    {{- if $f.Conditional }}
-    if !({{ $s.Receiver }}.{{template "compare_zero" $f}}) {
-        {{ $s.Receiver }}.{{ $f.ConditionalField }}.Set({{ $f.ConditionalIndex }})
-    }
-    {{- end }}
+{{- if hasFlags $s }}
+    {{ $s.Receiver }}.SetFlags()
 {{- end }}
 {{- range $f := $s.Fields }}
     {{- if not $f.ConditionalBool }}
